2001-04-23  Clint Adams <schizo@debian.org>

	* 14xxx: Doc/Zsh/mod_termcap.yo, Doc/Zsh/mod_terminfo.yo:
	Document $termcap, change reference to termcap/terminfo
	'strings' to 'values'.

2001-04-23  Andrej Borsenkow <bor@zsh.org>

	* 14077 : acconfig.h, aczsh.m4, configure.in, Config/defs.mk.in,
	Src/Makefile.in, Src/mkmakemod.sh, Src/zsh.mdd, Src/Modules/cap.mdd,
	Src/Modules/termcap.mdd, Src/Modules/terminfo.mdd,
	Src/Modules/zftp.mdd: revert Clint's build patches. They break
	build on ReliantUNIX and need some more consideration.

2001-04-23  Bart Schaefer  <schaefer@zsh.org>

	* 14070: Src/lex.c, Src/params.c, Test/D06subscript.ztst: Fix
	problem with parsing \" in subscripts during parameter expansion
	in double-quotes.

2001-04-22  Bart Schaefer  <schaefer@zsh.org>

	* 14066: Doc/Zsh/expn.yo, Doc/Zsh/params.yo, Src/params.c,
	Test/D06subscript.ztst: Document subscript usage; fix minor bug in
	(kK) subscript flags, and add a test for it.

2001-04-22  Clint Adams  <schizo@debian.org>

	* 14065: Src/params.c, Src/Modules/termcap.c,
	Src/Modules/terminfo.c: handle numeric capabilities
	properly within the termcap/terminfo parameters.

2001-04-21  Bart Schaefer  <schaefer@zsh.org>

	* 14062: Src/Modules/termcap.c: Avoid including both old-style
	termcap.h and ncurses term.h at the same time (see 13965).

	* 14060: Src/builtin.c, Src/lex.c, Src/params.c,
	Test/D06subscript.ztst: Fix problem with ${array[ix]=value}
	introduced by 14008; fix long-standing problems with
	`noglob typeset array[ix]=value' and `typeset 12foo=bar';
	fix parsing problem with ((\[ ...)) introduced by 14051.

2001-04-20  Clint Adams  <schizo@debian.org>

	* 14055: Src/Modules/termcap.c: include termio.h if available.
	This prevents Solaris 8 from choking on term.h.

	* 14053: Src/Modules/termcap.c, Src/Modules/termcap.mdd:
	add ${termcap} special parameter in the style of ${terminfo}.

2001-04-19  Bart Schaefer  <schaefer@zsh.org>

	* 14008, 14051: Src/lex.c, Src/math.c, Src/params.c,